--- a/css/styles.css
+++ b/css/styles.css
@@ -860,6 +860,14 @@ filter: drop-shadow(0px 4px 4px rgba(0, 0, 0, 0.15));
 border-radius: 4px;
 background-color: var(--temp-color);
 padding-left: 16px;
+outline: none;
+font-size: 16px;
+line-height: 1.25;
+letter-spacing: 0.03em;
+}
+
+.signup-window:focus {
+    border: 1px solid var(--accent-color);
 }
 
 .signup-btn {
