--- a/css/styles.css
+++ b/css/styles.css
@@ -371,6 +371,7 @@ background-color: var(--active-color);
     left: 490px;
     width: 30px;
     height: 30px;
+    background-color: var(--back-color);
     border: 1px solid rgba(0, 0, 0, 0.1);
     border-radius: 50%;
     cursor: pointer;
@@ -847,6 +848,7 @@ align-items: baseline;
 .signup-block {
 margin-left: 93px;
 }
+
 .signup-form {
   margin-top: 20px;
   display: inline-flex; 
@@ -859,6 +861,7 @@ border: 1px solid rgba(255, 255, 255, 0.3);
 filter: drop-shadow(0px 4px 4px rgba(0, 0, 0, 0.15));
 border-radius: 4px;
 background-color: var(--temp-color);
+color: var(--back-color);
 padding-left: 16px;
 outline: none;
 font-size: 16px;
